--- a/app/views/recipes/index.html.haml
+++ b/app/views/recipes/index.html.haml
@@ -1,1 +1,5 @@
-%h1 This is A placeHolder
+-@recipes.each do |recipe|
+	%h1=link_to recipe.title,recipe
+
+%br/
+=link_to "New Recipe",new_recipe_path,class:"btn btn-danger"
