--- a/app/views/recipes/show.html.haml
+++ b/app/views/recipes/show.html.haml
@@ -2,5 +2,5 @@
 %p= @recipe.description
 
 =link_to "Edit",edit_recipe_path(@recipe),class:"btn btn-primary"
-=link_to "Delete",@recipe,method: :delete,class:"btn btn-danger"
+=link_to "Delete",@recipe,method: :delete,class:"btn btn-danger",data:{confirm:"Are you Sure?"}
 =link_to "Back",root_path,class:"btn btn-info"
