--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,5 +6,14 @@
 	=javascript_include_tag 'application','data-turbolinks-track'=>true
 	=csrf_meta_tags
 %body
+	%nav.navbar.navbar-default
+		.container
+			.navbar-brand=link_to "CookBook",root_path
+
+			%ul.nav.navbar-nav.navbar-right
+				%li=link_to "New Recipe",new_recipe_path
+				%li=link_to "Sign Out","#"
+
 	.container
+		
 		=yield
