Paperclip and Image field in form added

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -15,5 +15,6 @@
 				%li=link_to "Sign Out","#"
 
 	.container
-		
+		-flash.each do |name,msg|
+			=content_tag :div,msg,class:"alert alert-info"
 		=yield
