--- a/app/views/recipes/_form.html.haml
+++ b/app/views/recipes/_form.html.haml
@@ -14,4 +14,13 @@
 
 		=f.input :description,label: "Description",class: "form-control"
 
+		.row
+			.col-md-6
+				%h3 Ingredients
+				#ingredients
+					=f.simple_fields_for :ingredients do |ingredient|
+						=render 'ingredient_fields', f: ingredient
+					.links
+						=link_to_add_association 'Add Ingredient', f, :ingredients,class:"btn btn-default add-button"
+
 		=f.submit class:"btn btn-primary"
