--- a/app/views/recipes/_form.html.haml
+++ b/app/views/recipes/_form.html.haml
@@ -22,5 +22,12 @@
 						=render 'ingredient_fields', f: ingredient
 					.links
 						=link_to_add_association 'Add Ingredient', f, :ingredients,class:"btn btn-default add-button"
+			.col-md-6
+				%h3 Directions
+				#ingredients
+					=f.simple_fields_for :directions do |direction|
+						=render 'direction_fields', f: direction
+					.links
+						=link_to_add_association 'Add Direction', f, :directions,class:"btn btn-default add-button"
 
 		=f.submit class:"btn btn-primary"
