--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -32,12 +32,9 @@ body {
 .main_content {
 	padding: 0 0 50px 0;
 }
-
 #show_image{
-	hieght:300px;
-	width:300px;
+	height: 362px;
 }
-
 .alert {
 	padding: 15px;
 	margin-bottom: 20px;
