--- a/app/views/recipes/show.html.haml
+++ b/app/views/recipes/show.html.haml
@@ -1,7 +1,7 @@
 .main_content
 	#recipe_top.row
 		.col-md-4
-			=image_tag @recipe.image.url,class:"recipe_image"
+			=image_tag @recipe.image.url,class:"recipe_image",id:"show_image"
 		.col-md-8
 			#recipe_info
 				%h1=@recipe.title
