--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,10 +9,15 @@
 	%nav.navbar.navbar-default
 		.container
 			.navbar-brand=link_to "CookBook",root_path
-
-			%ul.nav.navbar-nav.navbar-right
-				%li=link_to "New Recipe",new_recipe_path
-				%li=link_to "Sign Out","#"
+			
+			-if user_signed_in?
+				%ul.nav.navbar-nav.navbar-right
+					%li=link_to "New Recipe",new_recipe_path
+					%li=link_to "Sign Out",destroy_user_session_path,method: :delete,data:{confirm:"Are you sure?"}
+			-else
+				%ul.nav.navbar-nav.navbar-right
+					%li=link_to "Sign Up",new_user_registration_path
+					%li=link_to "Sign In",new_user_session_path
 
 	.container
 		-flash.each do |name,msg|
